02_Microservices/Kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    type: db
    vendor: MongoLabs
spec:
  containers:
  - name: db
    image: mongo:5.0
    command: ["mongod"]
    args: ["--rest", "--httpinterface"]
