02_Microservices/Kubernetes/Svc_Ing_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-toolkit
spec:
  replicas: 3
  selector:
    matchLabels:
      type: frontend
      service: devops-toolkit
  template:
    metadata:
      labels:
        type: frontend
        service: devops-toolkit
    spec:
      containers:
      - name: frontend
        image: vfarcic/devops-toolkit-series

---

apiVersion: v1
kind: Service
metadata:
  name: devops-toolkit
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    type: frontend
    service: devops-toolkit

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-toolkit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: devops-toolkit
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-toolkit
            port: 
              number: 8080
