02_Microservices/Kubernetes/ingress_services.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - backend:
          serviceName: webserver-blue-svc
          servicePort: 80
  - host: green.example.com
    http:
      paths:
      - backend:
          serviceName: webserver-green-svc
          servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: webserver-blue-svc
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    type: frontend
    service: webserver-blue-svc

---

apiVersion: v1
kind: Service
metadata:
  name: webserver-green-svc
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    type: frontend
    service: webserver-green-svc
